test/Fail/Issue2806.err
Issue2806.agda:27.18-22: error: [UnequalTerms]
b != a of type A
when checking that the expression refl has type
test b .u ≡ v (test b)
